--- a/main.bib
+++ b/main.bib
@@ -14,6 +14,35 @@
   publisher={IOP Publishing}
 }
 
+@techreport{process_rad,
+abstract = {In systems modelling for fusion power plants, it is essential to robustly predict the performance of a given machine design (including its respective operating scenario). One measure of machine performance is the energy confinement time $\tau$ E that is typically predicted from experimentally derived confinement scaling laws (e.g. IPB98(y,2)). However, the conventionally used scaling laws have been derived for ITER which-unlike a fusion power plant-will not have significant radiation inside the separatrix. In absence of a new high core radiation relevant confinement scaling, we propose an ad hoc correction to the loss power P L used in the ITER confinement scaling and the calculation of the stored energy W th by the radiation losses from the 'core' of the plasma P rad,core. Using detailed ASTRA/TGLF simulations, we find that an appropriate definition of P rad,core is given by 60{\%} of all radiative losses inside a normalised minor radius $\rho$core = 0.75. We see is as a zeroth order improvement in current systems modelling and encourage the physics community to work on more accurate predictions.},
+author = {Lux, H and Kemp, R and Fable, E and Wenninger, R},
+file = {::},
+keywords = {5255Dy,5255Fa Keywords: Impurities in plasmas,Magnetic confinement,Tokamak Submitted to: Plasma Phys Control Fusion,numbers: 5225Vy},
+title = {{Radiation and confinement in 0-D fusion systems codes}},
+url = {https://pure.mpg.de/rest/items/item{\_}2306505/component/file{\_}2316492/content}
+}
+
+@article{iter_confinement,
+abstract = {The understanding and predictive capability of transport physics and plasma confinement is reviewed from the perspective of achieving reactor-scale burning plasmas in the ITER tokamak, for both core and edge plasma regions. Very considerable progress has been made in understanding, controlling and predicting tokamak transport across a wide variety of plasma conditions and regimes since the publication of the ITER Physics Basis (IPB) document ( 1999 Nucl. Fusion [/0029-5515/39/12/301] 39 2137–2664 ). Major areas of progress considered here follow. (1) Substantial improvement in the physics content, capability and reliability of transport simulation and modelling codes, leading to much increased theory/experiment interaction as these codes are increasingly used to interpret and predict experiment. (2) Remarkable progress has been made in developing and understanding regimes of improved core confinement. Internal transport barriers and other forms of reduced core transport are now routinely obtained in all the leading tokamak devices worldwide. (3) The importance of controlling the H-mode edge pedestal is now generally recognized. Substantial progress has been made in extending high confinement H-mode operation to the Greenwald density, the demonstration of Type I ELM mitigation and control techniques and systematic explanation of Type I ELM stability. Theory-based predictive capability has also shown progress by integrating the plasma and neutral transport with MHD stability. (4) Transport projections to ITER are now made using three complementary approaches: empirical or global scaling, theory-based transport modelling and dimensionless parameter scaling (previously, empirical scaling was the dominant approach). For the ITER base case or the reference scenario of conventional ELMy H-mode operation, all three techniques predict that ITER will have sufficient confinement to meet its design target of Q = 10 operation, within similar uncertainties.},
+author = {Doyle, E. J. and Houlberg, W. A. and Kamada, Y. and Mukhovatov, V. and Osborne, T. H. and Polevoi, A. and Bateman, G and Connor, J. W. and Cordey, J. G. and Fujita, T and Garbet, X and Hahm, T. S. and Horton, L. D. and Hubbard, A. E. and Imbeaux, F and Jenko, F and Kinsey, J. E. and Kishimoto, Y and Li, J and Luce, T. C. and Martin, Y and Ossipenko, M and Parail, V and Peeters, A and Rhodes, T. L. and Rice, J. E. and Roach, C. M. and Rozhansky, V and Ryter, F and Saibene, G and Sartori, R and Sips, A. C.C. and Snipes, J. A. and Sugihara, M and Synakowski, E. J. and Takenaga, H and Takizuka, T and Thomsen, K and Wade, M. R. and Wilson, H. R.},
+doi = {10.1088/0029-5515/47/6/S02},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Physics) et al. - 2007 - Chapter 2 Plasma confinement and transport.pdf:pdf},
+isbn = {0029-5515},
+issn = {00295515},
+journal = {Nuclear Fusion},
+mendeley-groups = {Confinement},
+month = {jun},
+number = {6},
+pages = {S18--S127},
+publisher = {IOP Publishing},
+title = {{Chapter 2: Plasma confinement and transport}},
+url = {http://stacks.iop.org/0029-5515/47/i=6/a=S02?key=crossref.36e162162f67e92c3a62080002fc7583},
+volume = {47},
+year = {2007}
+}
+
+
 @article{oldpaper,
 abstract = {Hx «abn{\&}fcd tBUXi*srig{\textgreater}fcu boa talbcnd by • contractor of the VS. GovcTcmcai under coomct DE-ACQ5-MOR21400. Aixarfmjly, Ibe U.S. GUWUU li MOR210. Arfjy, oanstduwvc, *oy*liy-fice lkcrue to publish or rcprxtac the pablutod ferin af t{\&}» cortribotka, {\textless}* to dlow atben to do so, far VS. Oovczmaeid paipov{\&}.},
 author = {Uckan, N A},
