--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@
 \usepackage{changes}
 \definecolor{blue}{rgb}{0,0,1.}
 
-%\includeonly{model,biblio}
+\includeonly{results,biblio}
 
 \let\vec\mathbf
 
@@ -73,7 +73,7 @@
 
 \begin{document}
 
-\listofchanges
+%\listofchanges
 
 \include{cover}
 \pagestyle{plain}
