--- a/surfaces.tex
+++ b/surfaces.tex
@@ -11,7 +11,7 @@
 
 \section{Flux Surface Coordinates}
 
-We begin with the shape of the outer plasma surface (i.e. the 95\% flux surface) written in terms of normalized coordinates x and y as follows -- with $\alpha$ being an angle-like coordinate:
+We begin with the shape of the outer plasma surface (i.e.\ the 95\% flux surface) written in terms of normalized coordinates x and y as follows -- with $\alpha$ being an angle-like coordinate:
 \begin{equation}
 	R = R_0 + a x( \alpha )
 \end{equation}
@@ -90,7 +90,7 @@ The second form of the volume integral makes use of the small inverse aspect rat
 
 \section{Surface and Volume Integrals}
 
-\cref{eq:xalpha,eq:yalpha} are simple formulas describing the shape of the outer plasma surface. We next modify the model so that it gives a plausible description of the interior flux surfaces as well. The idea is to introduce a normalized flux label, which is radial-like in behavior. This label is denoted by $\rho$ and $\rho \in [0,1]$ with $\rho = 1$ being the outer plasma surface (i.e. the 95\% surface) and $\rho = 0$ being the magnetic axis. Additional trial and error results in the following representation for the flux surfaces,
+\cref{eq:xalpha,eq:yalpha} are simple formulas describing the shape of the outer plasma surface. We next modify the model so that it gives a plausible description of the interior flux surfaces as well. The idea is to introduce a normalized flux label, which is radial-like in behavior. This label is denoted by $\rho$ and $\rho \in [0,1]$ with $\rho = 1$ being the outer plasma surface (i.e.\ the 95\% surface) and $\rho = 0$ being the magnetic axis. Additional trial and error results in the following representation for the flux surfaces,
 \begin{equation}
 	x(\rho,\alpha) = \sigma( 1 - \rho^2 ) + c_0 \rho^4 + c_1 \rho \cos(\alpha) + c_2 \rho^2 \cos(2\alpha) + 
 		c_3 \rho^3 \cos(3\alpha)
