--- a/code.tex
+++ b/code.tex
@@ -26,7 +26,7 @@ As opposed to previous chapters, this one will focus on the numerics behind the 
 
 \section{Describing a Simple Algebra}
 
-\replaced{In essence,}{Boiled down,} the systems model used here is a simple algebra problem -- given five equations, solve for five unknowns. The goal is then to pick the five equations that best represent modern fusion reactor design. This selection should also be done in such a way that actually reduces the system of equations to a simple univariate root solving equation (i.e. one equation with one unknown). As will be shown in the results, this model does \replaced{reasonably}{remarkably} well: matching year-long modeling campaigns in seconds.
+\replaced{In essence,}{Boiled down,} the systems model used here is a simple algebra problem -- given five equations, solve for five unknowns. The goal is then to pick the five equations that best represent modern fusion reactor design. This selection should also be done in such a way that actually reduces the system of equations to a simple univariate root solving equation (i.e.\ one equation with one unknown). As will be shown in the results, this model does \replaced{reasonably}{remarkably} well: matching year-long modeling campaigns in seconds.
 
 The logical place to start in a discussion of this algebra problem is with the three equations fundamental to all reactor-grade tokamaks -- both in steady-state and pulsed operation. These are: the Greenwald density limit, power balance, and current balance. The Greenwald density's importance was hinted early on when it was used to simplify every equation derived thereafter. 
 \begin{equation}
@@ -86,15 +86,15 @@ Cost per Watt ($C_W$) & I & $ (C_W)_{const} \cdot \left( \sfrac{ K_F K_n ^ 2 ( \
 
 \subsection{\replaced{Including Limiting Constraints}{Rehashing the Limits}}
 
-The limits category is \replaced{composed of the limiting constraints given in \cref{chapter:model}.}{simply a rebranding of the secondary constraints given previously.} These include the physics derived limits from MHD theory -- i.e. the beta limit ($\beta_N$) and the kink safety factor ($q_{\replaced{*}{95}}$) -- which for clarity, set maximums on the allowed plasma pressure and \replaced{current,}{velocity,} respectively. Additionally, there were several engineering limits also described: wall loading, heat loading, and maximum power capacity. For this paper, wall loading from neutrons ($P_W$) is assumed to be important, whereas the other two engineering limits are not allowed to explicitly guide designs.
+The limits category is \replaced{composed of the limiting constraints given in \cref{chapter:model}.}{simply a rebranding of the secondary constraints given previously.} These include the physics derived limits from MHD theory -- i.e.\ the beta limit ($\beta_N$) and the kink safety factor ($q_{\replaced{*}{95}}$) -- which for clarity, set maximums on the allowed plasma pressure and \replaced{current,}{velocity,} respectively. Additionally, there were several engineering limits also described: wall loading, heat loading, and maximum power capacity. For this paper, wall loading from neutrons ($P_W$) is assumed to be important, whereas the other two engineering limits are not allowed to explicitly guide designs.
 
 Combined all these limits, as well as the yet to be defined \replaced{dynamic}{float} and \replaced{intermediate}{derived} equations, are given in \cref{table:eq}. These share a remarkably similar form to power balance when put into a generalized, separable state. This hints at why the major radius ($R_0$), the toroidal field strength ($B_0$), and the plasma current ($I_P$) can easily be separated and substituted out of the current balance equation.
 
-Before moving on, it proves useful to explain the two limits not used to explicitly guide reactor design -- divertor heat loading and the maximum power capacity. The simpler of the two to reason is the heat loading limit. Although removing the gigawatts\added{-per-square-meter} of heat is extremely difficult, it remains an unsolved problem worthy of its own research \replaced{machine.\cite{adx} }{machine, but currently neglected financially.} As such, it is only kept to provide a human-interpreted  measure of difficulty. The power cap, on the other hand, is just handled informally. If a reactor surpasses it (i.e. $ P_E > 4000 MW $), it is considered invalid.
+Before moving on, it proves useful to explain the two limits not used to explicitly guide reactor design -- divertor heat loading and the maximum power capacity. The simpler of the two to reason is the heat loading limit. Although removing the gigawatts\added{-per-square-meter} of heat is extremely difficult, it remains an unsolved problem worthy of its own research \replaced{machine.\cite{adx} }{machine, but currently neglected financially.} As such, it is only kept to provide a human-interpreted  measure of difficulty. The power cap, on the other hand, is just handled informally. If a reactor surpasses it (i.e.\ $ P_E > 4000 MW $), it is considered invalid.
 
-While the maximum power cap informally sets a maximum major radius for a machine, there also exists an implicit minimum major radius. This minimum occurs due to the hole-size constraint -- i.e. at some point there is no longer enough room on the inside of the machine to store the central solenoid, blanket, and TF coils.
+While the maximum power cap informally sets a maximum major radius for a machine, there also exists an implicit minimum major radius. This minimum occurs due to the hole-size constraint -- i.e.\ at some point there is no longer enough room on the inside of the machine to store the central solenoid, blanket, and TF coils.
 
-At this point, we can now explain how various quantities in the systems model can be set to user-given constant values. This basically allows users to treat one \replaced{dynamic}{floating} variable as a \replaced{static}{fixed} one (e.g. the temperature and bootstrap fraction).
+At this point, we can now explain how various quantities in the systems model can be set to user-given constant values. This basically allows users to treat one \replaced{dynamic}{floating} variable as a \replaced{static}{fixed} one (e.g.\ the temperature and bootstrap fraction).
 
 \subsection{Minimizing \replaced{Intermediate}{Derived} Quantities} 
 
@@ -103,7 +103,7 @@ Whereas the limits from the previous section represented constraints with real p
 	\tag{\ref{eq:rbi}}
 	R_0^{\, \gamma_R} \cdot B_0^{\, \gamma_B} \cdot I_P^{\, \gamma_I} = G( \overline T )
 \end{equation}
-What this collection of variables is really useful for, though, is finding minimum cost reactors -- both in a capital context as well as a cost-per-watt one. \replaced{This}{Without boring the reader, this} is done in a three stage process. \replaced{The first of which is to find a valid reactor -- i.e. one that satisfies every limiting constraint. Practically, this is done by searching over a range of scanned temperatures.}{First, some valid reactor is found: it does not matter if it is good, just valid. This of course can be found by systematically throwing darts at a dart board -- see \cref{fig:step_one}.}
+What this collection of variables is really useful for, though, is finding minimum cost reactors -- both in a capital context as well as a cost-per-watt one. \replaced{This}{Without boring the reader, this} is done in a three stage process. \replaced{The first of which is to find a valid reactor -- i.e.\ one that satisfies every limiting constraint. Practically, this is done by searching over a range of scanned temperatures.}{First, some valid reactor is found: it does not matter if it is good, just valid. This of course can be found by systematically throwing darts at a dart board -- see \cref{fig:step_one}.}
 
 %\begin{figure}[h]
 %\centering
@@ -150,13 +150,13 @@ Next, the equation for $\overline n$ -- shown in \cref{table:eq} -- is just a si
 	\tag{\ref{eq:tbar}}
 	\overline T = const.
 \end{equation}
-As was assumed earlier, this is sort of a default equation for the systems model. By this, we mean reactor curves can be created by scanning over temperatures, i.e. set $\overline T = 5 \ \textnormal{keV}$ in one run, 10 in the next, etc. This temperature equation also brings up a \replaced{difficulty for the algebraic solver, as it does not depend on:}{subtlety of the model, as it does not depend on} current, radius, or magnet strength. \added{Overcoming this difficulty is discussed next subsection.}
+As was assumed earlier, this is sort of a default equation for the systems model. By this, we mean reactor curves can be created by scanning over temperatures, i.e.\ set $\overline T = 5 \ \textnormal{keV}$ in one run, 10 in the next, etc. This temperature equation also brings up a \replaced{difficulty for the algebraic solver, as it does not depend on:}{subtlety of the model, as it does not depend on} current, radius, or magnet strength. \added{Overcoming this difficulty is discussed next subsection.}
 
 \subsection{Detailing the Equation Solver}
 
-The algorithm that motivated this generalized equation approach most notably bifurcates in the situation where the closure equation does not depend on $R_0$, $B_0$, or $I_P$ (i.e. \added{for} the temperature equation). The two scenarios are given in \cref{eq:case_1_R,eq:case_1_B,eq:case_1_I,eq:case_1_gamma,eq:case_2_R,eq:case_2_B,eq:case_2_gamma} -- where at least $R_0$ and $B_0$ are substituted out of the system. In the temperature case, $I_P$ is not needed to be explicitly removed. 
+The algorithm that motivated this generalized equation approach most notably bifurcates in the situation where the closure equation does not depend on $R_0$, $B_0$, or $I_P$ (i.e.\ \added{for} the temperature equation). The two scenarios are given in \cref{eq:case_1_R,eq:case_1_B,eq:case_1_I,eq:case_1_gamma,eq:case_2_R,eq:case_2_B,eq:case_2_gamma} -- where at least $R_0$ and $B_0$ are substituted out of the system. In the temperature case, $I_P$ is not needed to be explicitly removed. 
 
-Concretely, the root solve for the temperature  scenario is for the current, whereas it is for the temperature in all other cases. The nomenclature in the code is a \emph{match} for Scenario I (i.e. root solving for plasma temperature), and a \emph{solve} for Scenario II (i.e. root solving for plasma current).
+Concretely, the root solve for the temperature  scenario is for the current, whereas it is for the temperature in all other cases. The nomenclature in the code is a \emph{match} for Scenario I (i.e.\ root solving for plasma temperature), and a \emph{solve} for Scenario II (i.e.\ root solving for plasma current).
 
 \subsubsection{Scenario I -- Match for $\overline T$}
 
@@ -214,7 +214,7 @@ As stated at the beginning of the chapter, this systems model basically \replace
 
 This now sets the stage for the most interesting part of the document -- the results. \replaced{These}{In true Dickens fashion, they} will come in several forms. The first result type \deleted{we will encounter} will be temperature \replaced{scans that}{scans. These} allow us to validate the model \replaced{against other}{by comparing it to several} designs from the literature. \replaced{These are created using}{These will use} the Scenario II solver.
 
-\replaced{The}{Moving onto examples of the} Scenario I matcher \replaced{will then be used to create}{are} sensitivity studies and Monte Carlo samplings. The simple one variable sensitivities will reveal local trends from sweeping various \replaced{static}{fixed} (i.e. input) variables -- namely H, $\kappa$, $B_{CS}$, etc. \added{-- one at a time.} Whereas the samplings will highlight global trends as many \replaced{static}{fixed}/input variables are allowed to vary simultaneously.
+\replaced{The}{Moving onto examples of the} Scenario I matcher \replaced{will then be used to create}{are} sensitivity studies and Monte Carlo samplings. The simple one variable sensitivities will reveal local trends from sweeping various \replaced{static}{fixed} (i.e.\ input) variables -- namely H, $\kappa$, $B_{CS}$, etc.\ \added{-- one at a time.} Whereas the samplings will highlight global trends as many \replaced{static}{fixed}/input variables are allowed to vary simultaneously.
 
  These Scenario I \replaced{matchers}{flavors} are further subdivided in regards to the nature of their closure equation. The first \replaced{type}{flavor} comes from finding so called two limit solutions, which live at the point where the beta and kink (or wall) limits are just marginally satisfied. The second main type is then minimum cost reactors -- measured in either a capital cost or cost-per-watt context. These will be used in depth next chapter.
  
